--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/lpy3qip.css">
 </head>
-
+<!-- snail kiss! -->
 <body>
     <!-- heading section -->
     <div id="header">
