--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Stilton-ify</title>
 
-    <meta name="keywords" content="Geronimo Stilton, fonts, children">
-    <meta name="description" content="">
+    <meta name="keywords" content="Geronimo Stilton, fonts, fun">
+    <meta name="description" content="Stilton Space is a website where you can convert boring old text into a Geronimo Stilton-style explosion of typographical goodness.">
     <meta name="author" content="xn + AB">
 
-    <meta name="image" property="og:image" content="">
+    <meta name="image" property="og:image" content="img/og-img.png">
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/lpy3qip.css">
 </head>
 <!-- snail kiss! -->
+
 <body>
     <!-- heading section -->
     <div id="header">
