--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="Geronimo Stilton, fonts, fun">
     <meta name="description" content="Stilton Space is a website where you can convert boring old text into a Geronimo Stilton-style explosion of typographical goodness.">
     <meta name="author" content="xn + AB">
-
-    <meta name="image" property="og:image" content="img/og-img.png">
-
+    <meta property="og:title" content="Enter the Stilton Space!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://stilton.space" />
     <!-- fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/lpy3qip.css">
 </head>
