--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Stilton-ify</title>
+    <title>Enter the Stilton Space!</title>
 
     <meta name="keywords" content="Geronimo Stilton, fonts, fun">
     <meta name="description" content="Stilton Space is a website where you can convert boring old text into a Geronimo Stilton-style explosion of typographical goodness.">
@@ -33,13 +33,55 @@
         <div id="input">
             <label for="stiltonify" name="stiltonify">Text to Stilton-ify:</label>
             <textarea id="stiltonify" rows="8" placeholder="Enter text to Stilton-ify!"></textarea>
+
+            <p id="slider-text">Stilton-meter:
+            </p>
+
+            <div id="stiltonmeter">
+
+                <input type="range" min="1" max="100" value="50" class="slider" id="fun_slider">
+
+                <p id="fun_level">Geronimo...</p>
+
+                <script>
+                    let slider = document.getElementById("fun_slider");
+                    let output = document.getElementById("fun_level");
+
+                    // Update the current slider value (each time you drag the slider handle)
+                    slider.oninput = function() {    
+                        if (this.value < 30) {        
+                            output.innerHTML = "Boring."        
+                            output.style.fontFamily = "goudy-old-style"    
+                        } else if (this.value < 80) {        
+                            output.innerHTML = "Geronimo..."        
+                            output.style.fontFamily = "ff-uberhand-pro"    
+                        } else {        
+                            output.innerHTML = "Stilton!"        
+                            output.style.fontFamily = "remedy"    
+                        }
+                    }
+
+                </script>
+
+
+
+
+            </div>
+
+
             <input type="submit" value="Geronimo!!!" id="submit">
+
+
+
         </div>
 
         <div id="output">
             <label for="stiltonified" name="stiltonified">Stiltonified!</label>
             <textarea id="stiltonified" rows="8" placeholder="Stilton-ified text will appear here!"></textarea>
         </div>
+
+
+
     </form>
 
     <footer>
