--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta property="og:url" content="https://stilton.space" />
     <!-- fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/lpy3qip.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/slider.png" />
 </head>
 <!-- snail kiss! -->
 
