--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/lpy3qip.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="../img/slider.png" />
+    <link rel="shortcut icon" href="img/slider.png" />
 </head>
 <!-- snail kiss! -->
 <body>
     <!-- heading section -->
     <div id="header">
-        <img src="../img/cheese.svg" id="cheese">
+        <img src="img/cheese.svg" id="cheese">
         <div id="tagline">
-            <img src="../img/logo.svg" id="logo" alt="Stilton-ify">
+            <img src="img/logo.svg" id="logo" alt="Stilton-ify">
             <p>Enter the world of Geronimo Stilton!</p>
         </div>
     </div>
