--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <img src="img/cheese.svg" id="cheese">
         <div id="tagline">
             <img src="img/logo.svg" id="logo" alt="Stilton-ify">
-            <p>Enter the world of Geronimo Stilton!</p>
+            <p id="enter">Enter the world of Geronimo Stilton!</p>
         </div>
     </div>
     <!-- form -->
