--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
 
                     // Update the current slider value (each time you drag the slider handle)
                     slider.oninput = function() {
+                        console.log("ok")
                         if (this.value < 30) {
                             output.innerHTML = "Boring."
                             output.style.fontFamily = "goudy-old-style"
@@ -58,12 +59,13 @@
                     }
                 </script>
             </div>
-            <script type="text/javascript" src="../brain_of_stilton.js"></script>
+            <script type="module" src="./brain_of_stilton.js"></script>
+            <input id="name-button" type="button" value="Submit" onclick="stiltonify()">
             <input type="button" value="Geronimo!!!" id="submit" onclick="stiltonify()">
         </div>
         <div id="output">
             <label for="stiltonified" name="stiltonified">Stiltonified!</label>
-            <textarea id="stiltonified" rows="8" placeholder="Stilton-ified text will appear here!"></textarea>
+            <textarea id="stiltonified" rows="8" placeholder="Stilton-ified text will appear here!" readonly></textarea>
         </div>
     </form>
     <footer>
