--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,7 @@
                     }
                 </script>
             </div>
-            <script type="module" src="./brain_of_stilton.js"></script>
-            <input id="name-button" type="button" value="Submit" onclick="stiltonify()">
+            <script type="text/javascript" src="./brain_of_stilton.js"></script>
             <input type="button" value="Geronimo!!!" id="submit" onclick="stiltonify()">
         </div>
         <div id="output">
